# pipefy

./: .gitignore
api/: .env.example  pyproject.toml  test.py
cypress/: package-lock.json
cypress/cypress/e2e/: spec.cy.js
